fix(postrenderer): fix page break inside bibliography entry (closes #123)

--- a/quarkdown-html/src/main/resources/render/theme/components/_bibliography.scss
+++ b/quarkdown-html/src/main/resources/render/theme/components/_bibliography.scss
@@ -6,4 +6,9 @@
   grid-template-columns: auto auto;
   column-gap: 0.5em;
   row-gap: 1em;
+
+  .bibliography-entry-content {
+    // #123
+    break-inside: avoid;
+  }
 }
